Batches and Mills